fix resize issue that didnt happen when i was testing lol

--- a/popup/index.html
+++ b/popup/index.html
@@ -34,8 +34,9 @@
     </div>
 
     <footer>
-      Copyright © <span id="year">2025</span> toby@vsus.app | GitHub: <a href="https://github.com/tobycm/raver-ext">tobycm/raver-ext</a> | Web
-      version: <a href="https://raver.tobycm.dev">raver.tobycm.dev</a>
+      Copyright © <span id="year">2025</span> toby@vsus.app | GitHub:
+      <a href="https://github.com/tobycm/raver-ext" target="_blank">tobycm/raver-ext</a> | Web version:
+      <a href="https://raver.tobycm.dev" target="_blank">raver.tobycm.dev</a>
     </footer>
     <script src="popup.js"></script>
   </body>
